# flask_auth

./: .env  README.md  alembic.ini  docker-compose.yaml  dockerfile  settings.py
alembic/: env.py
alembic/versions/: 3caf603b3514_start.py
app/: config.py  main.py
app/auth/: models.py  views.py
app/templates/: login.html  logout.html  registration.html
poetry/: pyproject.toml
