[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["kassas20 <kassas20@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.2.1"
flask = "^3.0.2"
flask-bcrypt = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"
psycopg2-binary = "^2.9.9"
coverage = "^7.4.3"
flask-script = "^2.0.6"
flask-migrate = "^4.0.7"
alembic = "^1.13.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
